Fix border radius bug on mobile-menu

--- a/src/css/menu-popover.css
+++ b/src/css/menu-popover.css
@@ -20,6 +20,7 @@ menu-popover {
   text-align: center;
   background: transparent;
   box-shadow: var(--shadow);
+  border-radius: 8px;
   z-index: 1;
 
   transform-origin: top right;
